# src/controllers/userController.ts
@@ -33,10 +33,36 @@ export class UserController {
 
     try {
       const createdUser = await this.userService.createUser(userData);
-      res.status(201).json({ message: 'User created successfully', user: handleUserResponse(createdUser) });
+      res.status(201).json({ message: 'User created successfully', result: handleUserResponse(createdUser) });
     } catch (error) {
       console.error(error);
       res.status(500).json({ message: 'Internal server error' });
+    }
+  }
+
+  async updateUser(req: Request, res: Response): Promise<void> {
+    const userId = parseInt(req.params.id); // Extract user ID from request params
+    const { firstName, lastName, email, phone, password } = req.body;
+    const hashedPassword = await bcrypt.hash(password, 10);
+
+    const userDataToUpdate: Partial<User> = {
+      firstName,
+      lastName,
+      email,
+      phone,
+      password : hashedPassword,
+      updatedAt: new Date()
+    };
+
+    try {
+      const updatedUser = await this.userService.updateUser(userId, userDataToUpdate);
+      if (!updatedUser) {
+        res.status(404).json({ message: 'User not found' });
+        return;
+      }
+      res.status(200).json({ message: 'User updated successfully', result: handleUserResponse(updatedUser) });
+    } catch (error) {
+      res.status(500).json({ message: 'User not found' });
     }
   }
 
@@ -45,12 +71,26 @@ export class UserController {
     try {
       const user = await this.userService.getUserById(userId);
       if (user) {
-        res.status(200).json({ user: handleUserResponse(user) });
+        res.status(200).json({ result: handleUserResponse(user) });
       } else {
         res.status(404).json({ message: 'User not found' });
       }
     } catch (error) {
       res.status(500).json({ message: 'Internal server error' });
+    }
+  }
+
+  async getUsers(req: Request, res: Response): Promise<void> {
+    try {
+      const users = await this.userService.getAllUsers();
+      console.log(users)
+      if (users) {
+        res.status(200).json({ result: handleUserResponse(users) });
+      } else {
+        res.status(404).json({ message: 'No users available' });
+      }
+    } catch (error) {
+      res.status(500).json({ message: 'from Internal server error' });
     }
   }
   
