# src/responseHandlers/UserResponseHandler.ts
@@ -1,17 +1,18 @@
 import { User } from '../models/User';
 import { UserDTO } from '../dtos/UserDTO';
 
-export function handleUserResponse(user: User): UserDTO {
+export function handleUserResponse(user: User | User[]): UserDTO | UserDTO[] {
+  const usersArray = Array.isArray(user) ? user : [user];
+  
+  const userDTOs = usersArray.map((u) => ({
+    id: u.id,
+    firstName: u.firstName,
+    lastName: u.lastName,
+    email: u.email,
+    phone: u.phone,
+    createdAt: u.createdAt,
+    updatedAt: u.updatedAt,
+  }));
 
-    const userDTO: UserDTO = {
-        id: user.id,
-        firstName: user.firstName,
-        lastName: user.lastName,
-        email: user.email,
-        phone: user.phone,
-        createdAt: user.createdAt,
-        updatedAt: user.updatedAt,
-      };
-    
-    return userDTO;
+  return Array.isArray(user) ? userDTOs : userDTOs[0];
 }
