# src/routes/userRoutes.ts
@@ -1,6 +1,6 @@
 import { Router,Request,Response } from 'express';
 import { UserController } from '../controllers/userController';
-import { userValidationRules } from '../validators/userValidator';
+import { userUpdateValidationRules, userValidationRules } from '../validators/userValidator';
 import { validate } from '../middlewares/validate';
 import container from "../config/inversify.config"
 
@@ -11,8 +11,18 @@ router.post('/register', userValidationRules(), validate, async (req : Request, 
   await userController.createUser(req, res);
 });
 
+router.get('/all', async (req : Request, res : Response) => {
+  await userController.getUsers(req, res);
+});
+
+router.put('/:id', userUpdateValidationRules(), validate, async (req: Request, res: Response) => {
+  await userController.updateUser(req, res);
+});
+
 router.get('/:id', async (req : Request, res : Response) => {
   await userController.getUserById(req, res);
 });
+
+
 
 export default router;
