# src/validators/userValidator.ts
@@ -1,4 +1,4 @@
-import { body, ValidationChain } from 'express-validator';
+import { body, param, ValidationChain } from 'express-validator';
 import { PrismaClient } from '@prisma/client';
 
 const prisma = new PrismaClient();
@@ -39,3 +39,25 @@ export const userValidationRules = (): ValidationChain[] => {
       .withMessage('Password must be at least 6 characters long'),
   ];
 };
+
+export const userUpdateValidationRules = () => {
+  return [
+    param('id').isInt().withMessage('User ID must be a valid number'),
+    body('firstName').isString().withMessage('First name must be a string'),
+    body('lastName').isString().withMessage('Last name must be a string'),
+    body('email').isEmail().withMessage('Email must be a valid email')
+      .custom(async (email, { req }) => {
+        if (!req.params || !req.params.id) {
+          throw new Error('User ID is required');
+        }
+        const userId = parseInt(req.params.id, 10);
+        const user = await prisma.user.findUnique({
+          where: { email },
+        });
+        if (user && user.id !== userId) {
+          throw new Error('Email is already in use');
+        }
+      }),
+    body('phone').isString().withMessage('Phone number must be a string'),
+  ];
+}
